test/force-app/main/default/objects/Interconnection_Application__c/Interconnection_Application__c.object-meta.xml
<CustomObject>
    <label>Interconnection Application</label>
    <nameField>
        <displayFormat>IXA-{0000}</displayFormat>
        <label>Application Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interconnection Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>