test/force-app/main/default/objects/Interconnection_Application__c/fields/Design_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Design_Deliverables__c</fullName>
    <description>Dynamic - Changes with Application Status</description>
    <label>Design Deliverables</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Requested</fullName>
                <color>#FFFFFF</color>
                <default>true</default>
                <label>Not Requested</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <color>#FFFFFF</color>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Received</fullName>
                <color>#FFFFFF</color>
                <label>Received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>