test/force-app/main/default/objects/Interconnection_Application__c/fields/Development_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Development_Tracker__c</fullName>
    <label>Development Tracker</label>
    <referenceTo>Development_Tracker__c</referenceTo>
    <relationshipLabel>Interconnection Applications</relationshipLabel>
    <relationshipName>Interconnection_Applications1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>