test/force-app/main/default/objects/Interconnection_Application__c/fields/FERC_Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>FERC_Filing_Date__c</fullName>
    <description>When FERC filing status = complete</description>
    <label>FERC Filing Date</label>
    <type>Date</type>
</CustomField>