test/force-app/main/default/objects/Interconnection_Application__c/fields/FERC_Filing_Status__c.field-meta.xml
<CustomField>
    <fullName>FERC_Filing_Status__c</fullName>
    <description>When ministerial permit status = submitted</description>
    <label>FERC Filing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <color>#FFFFFF</color>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <color>#FFFFFF</color>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Complete</fullName>
                <color>#FFFFFF</color>
                <label>Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>