test/force-app/main/default/objects/Interconnection_Application__c/fields/FERC_Filling_Link__c.field-meta.xml
<CustomField>
    <fullName>FERC_Filling_Link__c</fullName>
    <label>FERC Filling Link</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>