test/force-app/main/default/objects/Interconnection_Application__c/fields/ISA_Link__c.field-meta.xml
<CustomField>
    <fullName>ISA_Link__c</fullName>
    <label>ISA Link</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>