test/force-app/main/default/objects/Interconnection_Application__c/fields/ISA_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>ISA_Received_Date__c</fullName>
    <label>ISA Received Date</label>
    <type>Date</type>
</CustomField>