test/force-app/main/default/objects/Interconnection_Application__c/fields/Pre_App_Fee__c.field-meta.xml
<CustomField>
    <fullName>Pre_App_Fee__c</fullName>
    <description>When Pre-app submitted is populated</description>
    <label>Pre-App Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>