test/force-app/main/default/objects/Interconnection_Application__c/fields/Pre_App_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_App_Received_Date__c</fullName>
    <description>When Pre-app submitted is populated</description>
    <label>Pre-App Received Date</label>
    <type>Date</type>
</CustomField>