test/force-app/main/default/objects/Interconnection_Application__c/fields/Pre_App_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_App_Submitted_Date__c</fullName>
    <description>When Pre-app requested field = Yes</description>
    <label>Pre-App Submitted Date</label>
    <type>Date</type>
</CustomField>