test/force-app/main/default/objects/Interconnection_Application__c/fields/Pre_Application_Link__c.field-meta.xml
<CustomField>
    <fullName>Pre_Application_Link__c</fullName>
    <label>Pre-Application Link</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>