test/force-app/main/default/objects/Interconnection_Application__c/fields/Preliminary_Review_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Review_End_Date__c</fullName>
    <description>When application status = study or ISA</description>
    <label>Preliminary Review End Date</label>
    <type>Date</type>
</CustomField>