test/force-app/main/default/objects/Interconnection_Application__c/fields/Preliminary_Review_Link__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Review_Link__c</fullName>
    <label>Preliminary Review Link</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>