test/force-app/main/default/objects/Interconnection_Application__c/fields/Preliminary_Review_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Review_Start_Date__c</fullName>
    <description>When application status = submitted and sub = Pending Utility review</description>
    <label>Preliminary Review Start Date</label>
    <type>Date</type>
</CustomField>