test/force-app/main/default/objects/Interconnection_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <color>#FFFFFF</color>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <color>#FFFFFF</color>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Deficiency</fullName>
                <color>#FFFFFF</color>
                <label>Deficiency</label>
            </value>
            <value>
                <fullName>Study</fullName>
            </value>
            <value>
                <fullName>ISA</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>