test/force-app/main/default/objects/Interconnection_Application__c/fields/Study_Fee__c.field-meta.xml
<CustomField>
    <fullName>Study_Fee__c</fullName>
    <description>when application status = study</description>
    <label>Study Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>