test/force-app/main/default/objects/Interconnection_Application__c/fields/Study_Link__c.field-meta.xml
<CustomField>
    <fullName>Study_Link__c</fullName>
    <label>Study Link</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>