test/force-app/main/default/objects/Interconnection_Application__c/fields/Study_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Study_Start_Date__c</fullName>
    <description>when application status = study</description>
    <label>Study Start Date</label>
    <type>Date</type>
</CustomField>