test/force-app/main/default/objects/Interconnection_Application__c/fields/Study_Version__c.field-meta.xml
<CustomField>
    <fullName>Study_Version__c</fullName>
    <description>when application status = study</description>
    <label>Study Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>