test/force-app/main/default/objects/Interconnection_Application__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Deliverables</fullName>
                <color>#FFFFFF</color>
                <label>Pending Deliverables</label>
            </value>
            <value>
                <fullName>Pending Utility Review</fullName>
                <color>#FFFFFF</color>
                <label>Pending Utility Review</label>
            </value>
            <value>
                <fullName>Pending Engineering</fullName>
                <color>#FFFFFF</color>
                <label>Pending Engineering</label>
            </value>
            <value>
                <fullName>Pending Customer</fullName>
                <color>#FFFFFF</color>
                <label>Pending Customer</label>
            </value>
            <value>
                <fullName>Pending DSD</fullName>
                <color>#FFFFFF</color>
                <label>Pending DSD</label>
            </value>
            <value>
                <fullName>Pending Utility</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Upgrade Costs</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>DSD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>