test/force-app/main/default/objects/Interconnection_Application__c/fields/Submitted_Storage_Size_kwh__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Storage_Size_kwh__c</fullName>
    <description>When application status = submitted</description>
    <label>Submitted Storage Size (kwh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>