test/force-app/main/default/objects/Interconnection_Application__c/fields/Submitted_System_Size_kWac__c.field-meta.xml
<CustomField>
    <fullName>Submitted_System_Size_kWac__c</fullName>
    <description>When application status = submitted</description>
    <label>Submitted System Size (kWac)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>