test/force-app/main/default/objects/Interconnection_Application__c/fields/Upgrade_Costs__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Costs__c</fullName>
    <description>when application status = study</description>
    <label>Upgrade Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>