test/force-app/main/default/objects/Interconnection_Application__c/fields/Upgrade_Payment_2_Amount__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Payment_2_Amount__c</fullName>
    <description>when application status = study</description>
    <label>Upgrade Payment 2 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>