test/force-app/main/default/objects/Interconnection_Application__c/fields/Upgrade_Payment_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Payment_2_Date__c</fullName>
    <description>when application status = study</description>
    <label>Upgrade Payment 2 Date</label>
    <type>Date</type>
</CustomField>