test/force-app/main/default/objects/Interconnection_Application__c/fields/Upgrades__c.field-meta.xml
<CustomField>
    <fullName>Upgrades__c</fullName>
    <description>when application status = study</description>
    <label>Upgrades</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>