test/force-app/main/default/objects/Interconnection_Application__c/fields/Utility_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Utility_Contact_Information__c</fullName>
    <description>When application status = submitted</description>
    <label>Utility Contact Information</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>