test/force-app/main/default/objects/Interconnection_Application__c/fields/Utility_Easement_Required__c.field-meta.xml
<CustomField>
    <fullName>Utility_Easement_Required__c</fullName>
    <description>when application status = study</description>
    <label>Utility Easement Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <color>#FFFFFF</color>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
                <color>#FFFFFF</color>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>